Integrated Gulp through npm & created docs for gh-pages

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BeSpider</title>
+    <title>Ali</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
         </nav>
 
         <div class="header-text">
-          <h1>Welcome To BeSpider</h1>
+          <h1>Ali Raza</h1>
           <button type="button" name="button">Get it Now!!</button>
         </div>
       </div>
@@ -149,7 +149,7 @@
               <img src="image/team_2.jpg" alt="">
             </div>
             <div class="text-center">
-              <h3>Muzamil</h3>
+              <h3>Muzammil</h3>
               <p>Game Over.Inc</p>
             </div>
             <div class="social-icon">
@@ -269,7 +269,7 @@
               <p class="text-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="text-right">
-              <h3>Jhon Deo , BeSpider.com</h3>
+              <h3>Jhon Deo</h3>
             </div>
           </div>
         </div>
